[package]
name = "gpt4all"
description = "Safe Rust bindings for gpt4all"
authors = ["Marcus Dunn"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
gpt4all-sys = { path = "../gpt4all-sys" }